test_suite/tests/ui/with-variant/skip_de_struct_field.stderr
error: variant `Struct` cannot have both #[serde(deserialize_with)] and a field `f1` marked with #[serde(skip_deserializing)]
  --> tests/ui/with-variant/skip_de_struct_field.rs:5:5
   |
3  |   #[derive(Deserialize)]
   |            ----------- in this derive macro expansion
4  |   enum Enum {
5  | /     #[serde(deserialize_with = "deserialize_some_other_variant")]
6  | |     Struct {
7  | |         #[serde(skip_deserializing)]
8  | |         f1: String,
9  | |         f2: u8,
10 | |     },
   | |_____^
   |
   = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
